This file documents the revision history for Perl web application UBR-Geo.

{{$NEXT}}

0.007     2015-05-14 08:08:21+02:00 Europe/Berlin
 
    - Add spinner in map detail view
    - Add deep linking into map regions
    - Add filter for libraries

0.006     2015-05-03 13:43:49+02:00 Europe/Berlin

    - Add filter for projects

0.005     2015-04-26 12:42:20+02:00 Europe/Berlin

    - Add map detail view
      tiles from digitool are fetched and displayed with Openlayers3 

0.004     2015-03-16 14:25:05+01:00 Europe/Berlin

    - Script to get boundaries from GCPs is added.
      This is useful when the corners of the map can be used 
      as ground control points.

0.003     2015-02-15 18:33:22+01:00 Europe/Berlin

    - first functional version

0.002     2015-02-14 19:06:12+01:00 Europe/Berlin

    - initial revision