@@ -37,28 +37,31 @@
           </div>
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/maps">Karten</a></li>
+              <li><a class="active" ng-href="#/maps">Karten</a></li>
               <li><a ng-href="#/map/{{mapId}}">Detail</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/about">&Uuml;ber</a></li>
             </ul>
-            <form class="navbar-form navbar-left" role="search">
-              <div class="form-group">
-               <label for="selectproject">Projekt:</label>
-               <select id="selectproject" class="form-control" 
+            <div>
+              <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                 <label for="selectproject">Projekt:</label>
+                 <select id="selectproject" class="form-control" 
                    ng-model="project" 
                    ng-options="project.short as project.name for project in projects" ng-change="projectChanged()">
                    <option value="">alle Karten</option>
-              </select>
-              <div class="form-group">
-               <label for="selectlibrary">Bestand:</label>
-               <select id="selectlibrary" class="form-control" ng-model="library" 
-                   ng-options="library.isil as library.name for library in libraries" ng-change="libraryChanged()">
-                   <option value="">alle Bibl.</option>
-              </select>
-              </div>    
-            </form>
+                 </select>
+                </div>  
+              </form>
+              <form class="navbar-form navbar-left" role="search">
+                <div class="form-group">
+                  <label for="selectlibrary">Bestand:</label>
+                  <select id="selectlibrary" class="form-control" ng-model="library" 
+                    ng-options="library.isil as library.name for library in libraries" ng-change="libraryChanged()">
+                    <option value="">alle Bibl.</option>
+                  </select>
+                </div>    
+              </form>
+            </div>  
           </div>
         </div>
       </div>
@@ -69,7 +72,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the ubrGeo team</p>
+        <p>ubrGeo - Universitätsbibliothek Regensburg</p>
       </div>
     </div>
 
