@@ -20,10 +20,6 @@ angular
     ])
   .config(['$routeProvider', function ($routeProvider) {
     $routeProvider
-      .when('/', {
-        templateUrl: 'views/main.html',
-        controller: 'MainCtrl'
-      })
       .when('/about', {
         templateUrl: 'views/about.html',
         controller: 'AboutCtrl'
@@ -37,6 +33,6 @@ angular
         controller: 'MapdetailCtrl'
       })
       .otherwise({
-        redirectTo: '/'
+        redirectTo: '/maps'
       });
   }]);
