@@ -5,9 +5,12 @@
     </p>
 -->    
     <div id="map-container">
-      <p>
-        Karte: {{isbd}}
-      </p>  
+      <div id="mapdetail-title">
+        {{isbd}}
+      </div>
+      <div id = "exemplar">
+          {{exemplar}}
+      </div>    
     <ol-map-detail class="map-detail">
     </ol-map-detail>
   </div>
